package com.co.bebolder.myAeroline.enumerator;

public enum HotelReservationType {
    SIMPLE, DOUBLE, PENTHOUSE
}
