package com.co.bebolder.myAeroline.enumerator;

public enum PayStatus {
    PENDING, PAY, CANCEL, CONFIRM
}
