package com.co.bebolder.myAeroline.enumerator;

public enum ReservationStatus {
    PENDING, CONFIRM
}
