package com.co.bebolder.myAeroline.enumerator;

public enum TravelPackageType {
    PACKAGE, SIMPLE
}
