package com.co.bebolder.myAeroline.enumerator;

public enum TravelReservationType {
    GOING, LAP
}
